Fix delete button layout on agenda program contents.

--- a/src/main/resources/templates/user/agenda_add.html
+++ b/src/main/resources/templates/user/agenda_add.html
@@ -115,7 +115,7 @@
                         </div>
                         <div class="col-span-6 md:col-span-2">
                             <label th:for="${'programContent['+ i.index +'].order'}">Order</label>
-                            <input class="rounded w-10/12 md:w-full" type="text"
+                            <input class="rounded w-10/12" type="text"
                                    th:name="${'programContent['+ i.index +'].order'}"
                                    th:value="${p.order}"
                                    th:id="${'programContent['+ i.index +'].order'}" required />
