--- a/src/main/resources/templates/user/agenda.html
+++ b/src/main/resources/templates/user/agenda.html
@@ -15,10 +15,14 @@
                 <div>
                     <form th:action="@{/user/agenda/delete}" method="post">
                         <input type="hidden" name="id" th:value="${a.id}" />
-                        <button th:formaction="@{/user/agenda/edit}" title="Edit this agenda" class="ml-3"><i class="fa-solid fa-pencil text-amber-400 text-2xl"></i></button>
-                        <button th:formaction="@{/user/agenda/copy}" title="Copy &amp; create a new agenda" class="ml-3"><i class="fa-solid fa-copy text-blue-400 text-2xl"></i></button>
-                        <button th:formaction="@{/user/agenda/download/{id}(id=${a.id})}" title="Download PDF" class="ml-3"><i class="fa-solid fa-download text-green-400 text-2xl"></i></button>
-                        <button class="delete_check ml-3" title="Delete this agenda"><i class="fa-solid fa-trash-can text-red-600 text-2xl"></i></button>
+                        <button th:formaction="@{/user/agenda/edit}" title="Edit this agenda" class="bg-amber-400 py-1 px-2 rounded-md ml-3">
+                            <i class="fa-solid fa-pencil text-white text-xl"></i></button>
+                        <button th:formaction="@{/user/agenda/copy}" title="Copy &amp; create a new agenda" class="bg-blue-400 py-1 px-2 rounded-md ml-3">
+                            <i class="fa-solid fa-copy text-white text-xl"></i></button>
+                        <button th:formaction="@{/user/agenda/download/{id}(id=${a.id})}" title="Download PDF" class="bg-green-400 py-1 px-2 rounded-md ml-3">
+                            <i class="fa-solid fa-download text-white text-xl"></i></button>
+                        <button class="delete_check bg-red-600 py-1 px-2 rounded-full ml-3" title="Delete this agenda">
+                            <i class="fa-solid fa-trash-can text-white text-xl"></i></button>
                     </form>
                 </div>
             </div>
