--- a/src/main/resources/templates/user/datacard.html
+++ b/src/main/resources/templates/user/datacard.html
@@ -27,8 +27,10 @@
                             <div class="basis-3/5 text-right">
                                 <form th:action="@{/user/datacard/delete}" method="post">
                                     <input type="hidden" name="id" th:value="${c.id}" />
-                                    <button class="delete_check mx-3"><i class="fa-solid fa-trash-can text-red-600 text-2xl"></i></button>
-                                    <button th:formaction="@{/user/datacard/edit}" class="ml-3"><i class="fa-solid fa-pencil text-amber-400 text-2xl"></i></button>
+                                    <button class="delete_check bg-red-600 py-1 px-2 rounded-full mx-3">
+                                        <i class="fa-solid fa-trash-can text-white text-xl"></i></button>
+                                    <button th:formaction="@{/user/datacard/edit}" class="bg-amber-400 py-1 px-2 rounded-md ml-3">
+                                        <i class="fa-solid fa-pencil text-white text-xl"></i></button>
                                 </form>
                             </div>
                         </div>
