--- a/src/main/resources/templates/user/schedule.html
+++ b/src/main/resources/templates/user/schedule.html
@@ -25,9 +25,9 @@
                             <span th:class="'px-4 py-1 rounded-lg text-slate-800 bg-slate-100 border border-slate-800'" th:text="${s.time}"></span>
                             <div class="float-right inline">
                                 <form class="inline mr-4" method="post" th:action="@{/user/schedule/delete/{id}(id=${s.id})}">
-                                    <button type="submit" class="delete_check"><i class="fa-solid text-3xl fa-trash-can text-red-600 md:m-0 m-3"></i></button>
+                                    <button type="submit" class="delete_check bg-red-600 py-1 px-2 rounded-full"><i class="fa-solid text-xl fa-trash-can text-white md:m-0 m-3"></i></button>
                                 </form>
-                                <a th:href="@{/user/schedule/edit/{id}(id=${s.id})}"><i class="fa-solid text-3xl fa-pencil text-amber-400"></i></a>
+                                <a th:href="@{/user/schedule/edit/{id}(id=${s.id})}" class="bg-amber-400 py-2 px-2 rounded-md"><i class="fa-solid text-xl fa-pencil text-white"></i></a>
                             </div>
                         </li>
                         <li th:each="e : ${s.events}" class="pb-5">
