Add pagination to agenda as well as option to delete old agendas. Email admin if token expires in 30 days.

--- a/src/main/resources/templates/fragments/menu-fragment.html
+++ b/src/main/resources/templates/fragments/menu-fragment.html
@@ -6,7 +6,7 @@
 <head />
 <body>
     <th:block th:fragment="menu">
-        <div class="md:col-span-3 col-span-12" th:with="user=${session.user}">
+        <div class="md:col-span-3 col-span-12">
             <div class="bg-gray-200">
                 <div class="">
                     <div class="md:hidden block w-10 float-right mr-3" id="menu-toggle">
