--- a/src/main/resources/templates/user/home.html
+++ b/src/main/resources/templates/user/home.html
@@ -9,8 +9,8 @@
     <div class="grid grid-cols-10 my-5">
         <div class="col-span-10 md:col-span-6"><h1 class="font-bold text-3xl">Welcome to Latter Day Ward</h1></div>
         <div class="col-span-10 md:col-span-4">
-            <div th:if="${session.user != null}">
-                <span class="font-bold">User: </span><span th:text="${session.user.username}" />
+            <div th:if="${user != null}">
+                <span class="font-bold">User: </span><span th:text="${user.username}" />
             </div>
             <a th:href="@{/user/ward}" class="text-blue-600" th:if="${access_requests != null}">
                 You have Access <span class="px-1.5 bg-red-600 rounded border-black border text-white" th:text="${access_requests.size}"></span> Request
