--- a/src/main/resources/templates/user/ward.html
+++ b/src/main/resources/templates/user/ward.html
@@ -7,20 +7,20 @@
 <body>
 <section layout:fragment="content">
     <div class="grid grid-cols-10">
-        <div class="col-span-10 lg:col-span-5 my-4" th:if="${session.user.showWardForm()}">
+        <div class="col-span-10 lg:col-span-5 my-4" th:if="${user.showWardForm()}">
             <h3 class="font-bold text-3xl mb-3">Ward Setup</h3>
             <form th:action="@{/user/ward/save}" method="post" th:object="${ward}">
                 <div class="mb-3">
                     <label for="ward-title">Ward Name</label>
                     <input type="text" class="block rounded border-gray-400" th:field="*{title}" id="ward-title" required placeholder="i.e. SunsetPeak 6th Ward"/>
                     <input type="hidden" th:field="*{created}" />
-                    <input type="hidden" th:name="userId" th:value="${session.user.id}"/>
+                    <input type="hidden" th:name="userId" th:value="${user.id}"/>
                     <input type="hidden" th:field="*{id}" th:if="${ward.id != null}"/>
                 </div>
                 <div class="mb-3">
                     <label for="ward-path">Ward Path</label>
                     <i class="fa-solid fa-circle-info text-red-600" title="Required API path. See {path} parameter in the swagger documentation."></i>
-                    <input type="text" class="block rounded border-gray-400 w-4/5" th:readonly="${session.user.hasWard()}"
+                    <input type="text" class="block rounded border-gray-400 w-4/5" th:readonly="${user.hasWard()}"
                            th:field="*{path}" id="ward-path" autocomplete="off" placeholder="i.e. sunsetpeak-6th" required/>
                     <p class="text-sm">No spaces. Must be min 5 characters, lower case, optional dash and numbers.</p>
                 </div>
@@ -29,14 +29,14 @@
                     <input type="text" class="block rounded border-gray-400 w-4/5" th:field="*{subTitle}" id="descr" placeholder="i.e. Sunset Peak 6th in the California Sunset Stake"/>
                 </div>
                 <p class="leading-4">
-                    <small class="text-red-600" th:if="${session.user.hasWard()}">
+                    <small class="text-red-600" th:if="${user.hasWard()}">
                         Note: Once you have saved your ward  you will not be able to change the ward path again.
                         If you absolutely must change the path <a class="underline text-blue-600" href="mailto:admin@latterdayward.com?subject=Change%20Ward%20Path">please contact me.</a>
                     </small>
                 </p>
                 <button type="submit" class="my-3 p-1.5 bg-blue-400 block rounded border-blue-600 border" id="ward-save">Save</button>
             </form>
-            <div class="bg-amber-100 border border-amber-400 rounded-lg mt-8" th:if="${session.user.isOwner()}">
+            <div class="bg-amber-100 border border-amber-400 rounded-lg mt-8" th:if="${user.isOwner()}">
                 <div class="p-4 rounded-t-lg font-bold bg-amber-200">Need to Transfer Ownership?</div>
                 <div class="p-4 border-t-amber-400 border-t">
                     <p class="mb-2">Transfering ownership will remove you as the ward owner and assign the ward and api token to another user.</p>
@@ -44,9 +44,9 @@
                 </div>
             </div>
         </div>
-        <div class="col-span-10 lg:col-span-5 my-4" th:if="${!session.user.hasWard()}">
+        <div class="col-span-10 lg:col-span-5 my-4" th:if="${!user.hasWard()}">
             <h3 class="font-bold text-3xl mb-3">Request to join a ward</h3>
-            <form th:action="@{/user/access/request}" method="post" th:if="${!session.user.accessRequested()}" th:object="${accessRequest}">
+            <form th:action="@{/user/access/request}" method="post" th:if="${!user.accessRequested()}" th:object="${accessRequest}">
                 <select class="form-select rounded" th:field="*{ward}" required>
                     <option value="">Select a Ward</option>
                     <option th:each="w : ${ward_list}" th:text="${w.value}" th:value="${w.key}"></option>
@@ -70,20 +70,20 @@
                     </ul>
                 </div>
             </form>
-            <div class="alert alert-info" th:if="${session.user.accessRequest != null}">
-                You have requested <span th:text="${session.user.accessRequest.role}" /> access to <span th:text="${session.user.accessRequest.ward}" />
+            <div class="alert alert-info" th:if="${user.accessRequest != null}">
+                You have requested <span th:text="${user.accessRequest.role}" /> access to <span th:text="${user.accessRequest.ward}" />
             </div>
         </div>
         <div class="col-span-10 lg:col-span-5 my-4">
-            <div class=""  th:if="${session.user.isEditor()}">
-                You are now a content Editor for <span th:text="${session.user.ward.title}" />.
+            <div class=""  th:if="${user.isEditor()}">
+                You are now a content Editor for <span th:text="${user.ward.title}" />.
                 If you'd like to be removed as a content Editor, the ward Owner will have to remove you.
             </div>
-            <div class="bg-blue-200 border border-blue-600 p-4 rounded-lg" th:if="${session.user.isPublisher()}">
-                You are now a content Publisher for <span th:text="${session.user.ward.title}" />.
+            <div class="bg-blue-200 border border-blue-600 p-4 rounded-lg" th:if="${user.isPublisher()}">
+                You are now a content Publisher for <span th:text="${user.ward.title}" />.
                 If you'd like to be removed as a content Publisher, the ward Owner will have to remove you.
             </div>
-            <div th:if="${session.user.isOwner()}">
+            <div th:if="${user.isOwner()}">
                 <h3 class="font-bold text-3xl">Editors</h3>
                 <div class="grid grid-cols-5">
                     <div class="col-span-2 font-bold">Username</div>
@@ -118,7 +118,7 @@
                 <div th:if="${#lists.isEmpty(editors)}">There are no ward editors</div>
 
                 <h3 class="font-bold text-3xl mt-5">Publishers</h3>
-                <div class="grid grid-cols-5" th:if="${session.user.isOwner}">
+                <div class="grid grid-cols-5" th:if="${user.isOwner}">
                     <div class="col-span-2 font-bold">Username</div>
                     <div class="col-span-1 font-bold text-center">Publisher</div>
                     <div class="col-span-1 font-bold text-center">Remove</div>
