--- a/src/main/resources/templates/user/file.html
+++ b/src/main/resources/templates/user/file.html
@@ -5,7 +5,7 @@
       layout:decorate="~{main/master}" lang="en">
 <head />
 <body>
-<section layout:fragment="content">
+<section layout:fragment="content" th:with="user=${#authentication.principal}">
     <div class="grid grid-cols-12 gap-6">
         <div class="col-span-12">
             <h3 class="font-bold text-3xl my-4">Image Uploads</h3>
