--- a/src/main/resources/templates/user/ward.html
+++ b/src/main/resources/templates/user/ward.html
@@ -5,7 +5,7 @@
       layout:decorate="~{main/master}" lang="en">
 <head />
 <body>
-<section layout:fragment="content">
+<section layout:fragment="content" th:with="user=${#authentication.principal}">
     <div class="grid grid-cols-10">
         <div class="col-span-10 lg:col-span-5 my-4" th:if="${user.showWardForm()}">
             <h3 class="font-bold text-3xl mb-3">Ward Setup</h3>
